@@ -1,5 +1,8 @@
 Change Log
 
+2009-06-26
+	Fix: STRING->NUMBER always returned an inexact result for
+	real number representations.
 2009-06-25
 	Fix: Stack was not cleaned up properly in some error conditions.
 	Fix: (*) and (+) could crash the interpreter.
